martian-derive/tests/ui_martian_filetype/test_number_structname.rs

use martian_derive::martian_filetype;

martian_filetype! {4File, txt}

fn main() {}